Fixed bug with non-breakable brick collisions. Started working on power-up logic

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<script src="src/ball.js"></script>
 	<script src="src/paddle.js"></script>
 	<script src="src/brick-level.js"></script>
+	<script src="src/power-up.js"></script>
 	<script src="src/player.js"></script>
 	<script src="src/main.js"></script>
 
